# docs/swagger.json
@@ -405,6 +405,56 @@
                 "responses": {}
             }
         },
+        "/protected/passenger-message": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "add a passenger message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message"
+                ],
+                "summary": "POST a passenger message",
+                "parameters": [
+                    {
+                        "description": "Message",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.PassengerMessage"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/protected/passenger-messages": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve all passenger-messages",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Get all passenger-messages",
+                "responses": {}
+            }
+        },
         "/protected/passenger-notifications": {
             "get": {
                 "security": [
@@ -691,6 +741,56 @@
                         "required": true
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/protected/taxist-message": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "add a taxist message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message"
+                ],
+                "summary": "POST a taxist message",
+                "parameters": [
+                    {
+                        "description": "Message",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.TaxistMessage"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/protected/taxist-messages": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve all taxist-messages",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Get all taxist-messages",
                 "responses": {}
             }
         },
@@ -1068,6 +1168,14 @@
                 }
             }
         },
+        "handlers.PassengerMessage": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.PassengerPeople": {
             "type": "object",
             "properties": {
@@ -1132,6 +1240,14 @@
                     }
                 },
                 "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.TaxistMessage": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
